make delete job launchable from export job
